Code Overflow Y Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,9 @@
 }
 
 .App .bottomBar .resultBar .resultEditor {
-  width: 100%;
-  height: 85%;
+  min-height: 75%;
+  max-height: 75%;
+  overflow: scroll;
   padding: 0.5%;
 }
 
@@ -239,11 +240,10 @@
 .App .bottomBar .subscriptionBar .subsEditor{
   /* height: max-content; */
   width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  height: 36%;
+  min-height: 36%;
+  max-height: 36%;
   padding: 0.5%;
-  overflow-y: scroll;
+  overflow: scroll;
 }
 
 .App .bottomBar .subscriptionBar .senderBar {
@@ -280,10 +280,11 @@
 }
 
 .App .bottomBar .subscriptionBar .subsEditor .seditor {
-  height: 100%;
-  min-width: 100%;
+  width: 100%;
   background-color: rgb(30, 28, 28);
   /* border-radius: 20px; */
+  /* height: 100%; */
+  min-height: 100%;
   outline: 0;
   font-size: small;
   border: none;
@@ -292,14 +293,14 @@
   color: white;
   resize: none;
   counter-reset: line;
-  overflow-y: scroll;
+  /* overflow: scroll; */
   /* color: white; */
 }
 
 .App .bottomBar .subscriptionBar .subsEditor .seditor #codeArea {
   outline: none;
   padding-left: 60px;
-  overflow: scroll;
+  white-space: nowrap;
 }
 
 .App .bottomBar .subscriptionBar .subsEditor .seditor pre {
